--- a/listen.html
+++ b/listen.html
@@ -368,52 +368,32 @@
         </div> 
     </section>
 
+  <footer class="container-fluid footer bg-all-footer">
 
 
-    <footer class="container-fluid footer">
-
-        <div class="row bg-all-footer">
-
-            <div class="col-xs-8 col-md-3 bg-contactus">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h5 class="uppercase">Contact Us</h5>
-                    </div>
-                </div>
-
-                <div class="row contact-email">
-                    <div class="col-xs-12">
-                        <dl class="dl-horizontal">
-                            <dt>email:</dt>
-                            <dd>email@email.com</dd>
-                            <dt>telephone:</dt>
-                            <dd>000-000-000</dd>
-                        </dl>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xs-4 col-md-offset-6 col-md-3 bg-social">
-                <div class="wrapper-footer-social">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <h5 class="uppercase text-center">Follow us!</h5>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <ul class="list-inline social-media-area">
-                                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></span></a></li>
-                                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></span></a></li>
-                                <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="bg-contactus">
+            <h5 class="uppercase h5footer">Contact Us</h5>
+            <dl class="dl-horizontal">
+                <dt>email:</dt>
+                <dd>email@email.com</dd>
+                <dt>telephone:</dt>
+                <dd>000-000-000</dd>
+            </dl>
         </div>
 
+        <div class="bg-social">
+
+            <h5 class="uppercase text-center h5footer">Follow us!</h5>
+
+            <ul class="list-inline social-media-area">
+                <li class="social-item"><a href="https://www.facebook.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-facebook" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.instagram.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-instagram" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
+                <li class="social-item"><a href="https://www.twitter.com/" target="_blank"><span class="bg-social-icon"><i class="fa fa-twitter" aria-hidden="true" aria-hidden="true" aria-hidden="true"></i></span></a></li>
+            </ul>
+        </div>
     </footer>
+
+    
 
 
 
